--- a/開発用/src/assets/sass/project/_p-gnav.scss
+++ b/開発用/src/assets/sass/project/_p-gnav.scss
@@ -1,29 +1,28 @@
 @use "../global" as global;
 
 .p-gnav {
-    // background: rgba($color: #2A2926, $alpha: .8);
     background: #2a2926;
     position: absolute;
     z-index: -1;
-    // z-index: 10;
+    overflow: hidden;
     opacity: 0;
-    // opacity: 1;
     top: 0;
-    right: 0;
-    width: 859px;
+    right: -120%;
+    width: 900px;
     height: 723px;
     pointer-events: none;
-    padding: 109px 251px 154px 86px;
+    padding: 110px 302px 151px 84px;
     display: flex;
     color: global.$white-color;
     font-family: global.$main-font;
+    transition: all 1s;
 
-    @include global.mq(tab){
+    @include global.mq(tab) {
         width: 100%;
         height: 100vh;
         padding: 109px 27vw 154px 10vw;
     }
-    @include global.mq(sp){
+    @include global.mq(sp) {
         width: 100%;
         height: 100vh;
         padding: 109px 17% 154px 9%;
@@ -31,29 +30,71 @@
 }
 // ハンガーガーメニュー表示
 .js-panelactive {
-    // transition: all 0.1s;
     position: fixed;
     z-index: 10;
     opacity: 1;
-    transition: all 0.3s;
+    display: flex;
+    right: 0;
     pointer-events: visible;
-    // display: grid;
     justify-content: space-between;
-    // align-items: center;
+
+    .p-gnav__nav-list {
+        opacity: 1;
+        transition: all 0.3s ease 0s;
+    }
 }
 
 .p-gnav__logo-img {
     display: block;
     width: 66px;
     height: 76px;
-    margin: 0 auto;
+    margin: 0 auto 5px;
 }
 .p-gnav__nav-list {
-    // padding-left: 163px;
     font-size: calc(24 / 16 * 1rem);
     line-height: 1.5;
     padding-bottom: 70px;
-    @include global.mq(sp){
+    opacity: 0;
+    @include global.mq(sp) {
         font-size: 1.1rem;
+    }
+}
+
+// フェイドアニメーション 開発中..
+.p-nav-anm {
+    -webkit-animation-name: navAnm;
+    animation-name: navAnm;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+    -webkit-animation-duration: 0.7s;
+    animation-duration: 0.7s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+@-webkit-keyframes navAnm {
+    0% {
+        -webkit-filter: blur(15px);
+        filter: blur(15px);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-filter: blur(0);
+        filter: blur(0);
+        opacity: 1;
+    }
+}
+@keyframes navAnm {
+    0% {
+        opacity: 0;
+        -webkit-filter: blur(15px);
+        filter: blur(15px);
+    }
+    100% {
+        -webkit-filter: blur(0);
+        filter: blur(0);
+        opacity: 1;
     }
 }
