--- a/開発用/src/assets/sass/project/_index.scss
+++ b/開発用/src/assets/sass/project/_index.scss
@@ -21,5 +21,6 @@
 @use "p-footer__link--nav";
 @use "p-footer__sns--items";
 @use "p-dialog";
-@use "p-reservation"
+@use "p-reservation";
+@use "p-room";
 
