--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -15,6 +15,7 @@ header {
 }
 
 .l-lower-header {
+	animation: fadeInAnime 2s;
 	aspect-ratio: 1440/500;
 	width: 100%;
 	-o-object-fit: cover;
@@ -232,6 +233,7 @@ header {
 }
 
 .c-main-message {
+	font-family: "Zen Kaku Gothic New", sans-serif;
 	font-size: 15px;
 	letter-spacing: 1.95px;
 	line-height: 2.303;
@@ -1280,6 +1282,70 @@ dialog::backdrop {
 	padding: 1em 4.5em;
 }
 
+.p-room__version {
+	display: flex;
+	justify-content: space-between;
+	margin: 0 auto;
+	margin-bottom: 120px;
+}
+
+.p-room__version--reverse {
+	flex-direction: row-reverse;
+}
+
+.p-room__imgs {
+	display: grid;
+	gap: 10px;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 150px;
+	width: min(55%, 580px);
+}
+
+.p-room__img {
+	overflow: hidden;
+	vertical-align: bottom;
+}
+
+.p-room__img:first-of-type {
+	align-self: flex-end;
+	grid-column: 1/3;
+}
+
+.p-room__sentence {
+	width: min(38%, 430px);
+}
+
+.p-room__title {
+	border-bottom: 1px solid;
+	font-size: 2.1333333333rem;
+	font-weight: 800;
+	line-height: 1.448125;
+	margin-bottom: 10px;
+}
+
+.p-room__title-eng {
+	font-size: 1rem;
+	font-weight: 500;
+	line-height: 1;
+	padding-left: 1em;
+}
+
+.p-room__text {
+	font-family: "Zen Kaku Gothic New", sans-serif;
+	font-size: 1rem;
+	font-weight: 400;
+	letter-spacing: 0.12em;
+	line-height: 1.89;
+}
+
+.p-room__text-bottom {
+	font-size: 0.9333333333rem;
+	font-weight: 400;
+	letter-spacing: 0.12em;
+	line-height: 1.89;
+	padding-top: 40px;
+}
+
 @media (min-width: 768px) and (max-width: 1280px) {
 
 .c-drawer-btn {
@@ -1893,6 +1959,18 @@ dialog::backdrop {
 
 .c-mv__title--footer {
 	text-align: center;
+}
+
+}
+
+@keyframes fadeInAnime {
+
+0% {
+	opacity: 0;
+}
+
+100% {
+	opacity: 1;
 }
 
 }
