--- a/開発用/src/assets/sass/component/_c-main-message.scss
+++ b/開発用/src/assets/sass/component/_c-main-message.scss
@@ -4,9 +4,11 @@
     font-size: 15px;
     text-align: center;
     line-height: calc( 34.545 / 15 );
+    // letter-spacing: 1.95px;
     letter-spacing: 1.95px;
     padding-top: 120px;
     padding-bottom: 110px;
+    font-family: global.$main-font;
 }
 
 .c-main-message__text {
