--- a/開発用/src/assets/sass/component/_c-drawer-btn.scss
+++ b/開発用/src/assets/sass/component/_c-drawer-btn.scss
@@ -4,7 +4,7 @@
     background-color: #272727;
     width: 110px;
     height: 85px;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     z-index: 11;
