--- a/開発用/src/assets/sass/component/_c-price__note.scss
+++ b/開発用/src/assets/sass/component/_c-price__note.scss
@@ -5,6 +5,7 @@
   @include global.font(14, 400, 26.46, 1.68);
   padding-top: 20px;
   color: global.$text-color;
+  padding-left: 16px;
 
   @include global.mq('sp') {
     @include global.font(14, 400, 26.46, 0.56);
