共通フッター余白調整、スムーススクロール追加

--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -66,7 +66,7 @@ header {
 	animation: fadeInAnime 3s forwards 1s;
 	left: 50%;
 	opacity: 0;
-	position: absolute;
+	position: relative;
 	top: 35.3%;
 	transform: translateX(-50%);
 }
@@ -79,8 +79,7 @@ header {
 .l-footer {
 	background: url(../img/top/footer_bg.png) center center/cover no-repeat;
 	height: 500px;
-	margin-top: 767px;
-	padding-top: 104px;
+	padding-top: 120px;
 	position: relative;
 }
 
@@ -698,6 +697,7 @@ header {
 	color: #2D2D2E;
 	font-family: "Zen Kaku Gothic New", sans-serif;
 	font-size: 2rem;
+	font-size: calc(24px + 8 * (100vw - 375px) / 1065);
 	font-weight: 800;
 	letter-spacing: 0.003125em;
 	line-height: 1.448125;
@@ -795,6 +795,30 @@ header {
 	line-height: 1.89;
 	padding-left: 16px;
 	padding-top: 20px;
+}
+
+.c-scroll__btn {
+	background-color: #262626;
+	border: none;
+	bottom: 20px;
+	cursor: pointer;
+	display: none;
+	height: 80px;
+	position: fixed;
+	right: 100px;
+	width: 80px;
+	z-index: 10;
+}
+
+.c-scroll__btn::after {
+	background: url(../img/top/scroll_icon.png) center center/contain no-repeat;
+	content: "";
+	height: 21.67px;
+	left: 50%;
+	position: absolute;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 34.67px;
 }
 
 .p-logo__wrap {
@@ -1414,6 +1438,7 @@ header {
 .p-onsen__price {
 	background: url(../img/onsen/background.png) center center/cover no-repeat;
 	margin: 0 auto;
+	margin-bottom: 120px;
 	padding-top: 100px;
 	width: 1080px;
 }
@@ -1682,7 +1707,7 @@ dialog::backdrop {
 
 .l-footer {
 	height: auto;
-	margin-top: 209px;
+	margin-top: 20px;
 	padding-top: 40px;
 }
 
@@ -1881,10 +1906,25 @@ dialog::backdrop {
 	font-weight: 400;
 	letter-spacing: 0.06em;
 	line-height: 1.89;
+	padding-bottom: 1rem;
+	padding-left: 0;
+	padding-top: 0;
+}
+
+.c-price__content--title {
+	font-size: 1.5rem;
+	font-weight: 800;
+	letter-spacing: 0.0041666667em;
+	line-height: 1.4479166667;
+}
+
+.c-price__content--title::before {
+	height: 30px;
+	width: 30px;
 }
 
 .c-operating__time {
-	display: inline;
+	display: block;
 	margin-left: 0;
 }
 
@@ -1929,6 +1969,18 @@ dialog::backdrop {
 	font-weight: 400;
 	letter-spacing: 0.04em;
 	line-height: 1.89;
+	padding-left: 0;
+}
+
+.c-scroll__btn {
+	height: 50px;
+	right: 20px;
+	width: 50px;
+}
+
+.c-scroll__btn::after {
+	height: 13.54px;
+	width: 21.67px;
 }
 
 .p-logo__wrap {
@@ -2216,12 +2268,60 @@ dialog::backdrop {
 	font-size: 1.6em;
 }
 
+.p-onsen__block:not(:first-child) {
+	margin-top: 1.8rem;
+}
+
+.p-onsen__block:nth-child(2) {
+	display: block;
+}
+
+.p-onsen__block:last-child {
+	flex-direction: column-reverse;
+}
+
+.p-onsen__block:first-child {
+	flex-direction: column-reverse;
+}
+
+.p-onsen__img {
+	width: 100%;
+}
+
+.p-onsen__info {
+	padding-bottom: 1rem;
+	padding-left: 0;
+	padding-right: 0;
+	padding-top: 0;
+	width: 100%;
+}
+
+.p-onsen__info:nth-child(2) {
+	padding-bottom: 1rem;
+	padding-left: 0;
+	padding-right: 0;
+	padding-top: 0;
+	width: 100%;
+}
+
+.p-onsen__content {
+	padding-bottom: 60px;
+}
+
+.p-onsen__properties {
+	padding-top: 40px;
+}
+
 .p-onsen__price {
+	margin-bottom: 20px;
+	padding-top: 56px;
 	width: 100%;
 }
 
 .p-price__wrap {
 	min-width: 89.3%;
+	padding-bottom: 40px;
+	padding-top: 5px;
 	width: 89.3%;
 }
 
@@ -2237,8 +2337,12 @@ dialog::backdrop {
 	position: inherit;
 }
 
-.p-price__detail--block {
-	margin-left: auto;
+.p-price__weekday--wrap .p-price__detail--block {
+	margin-left: 71px;
+}
+
+.p-price__holiday__wrap .p-price__detail--block {
+	margin-left: 20px;
 }
 
 .p-reservation {
