--- a/開発用/src/assets/sass/component/_c-operating__time.scss
+++ b/開発用/src/assets/sass/component/_c-operating__time.scss
@@ -7,7 +7,7 @@
   @include global.font(16, 400, 30.24, 1.92);
 
   @include global.mq('sp') {
-    display: inline;
+    display: block;
     margin-left: 0;
   }
 }
