--- a/開発用/src/assets/sass/project/_p-price__wrap.scss
+++ b/開発用/src/assets/sass/project/_p-price__wrap.scss
@@ -13,5 +13,7 @@
   @include global.mq('sp') {
     width: global.$sp-width;
     min-width: global.$sp-width;
+    padding-bottom: 40px;
+    padding-top: 5px;
   }
 }
