--- a/開発用/src/assets/sass/component/_c-onsen__block-desc.scss
+++ b/開発用/src/assets/sass/component/_c-onsen__block-desc.scss
@@ -10,5 +10,8 @@
 
   @include global.mq('sp') {
     @include global.font(15, 400, 28.35, 0.9);
+    padding-top: 0;
+    padding-left: 0;
+    padding-bottom: 1rem;
   }
 }
