--- a/開発用/src/assets/sass/project/_p-onsen__info.scss
+++ b/開発用/src/assets/sass/project/_p-onsen__info.scss
@@ -6,10 +6,26 @@
   padding-bottom: 3rem;
   padding-left: 6%;
   width: 36%;
-  &:nth-child(2){
+
+  @include global.mq('sp') {
+    width: 100%;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 1rem;
+    padding-left: 0;
+  }
+
+  &:nth-child(2) {
     padding-top: 14.2%;
     padding-right: 12%;
     padding-left: 2.5rem;
     width: 42%;
+    @include global.mq('sp') {
+      width: 100%;
+      padding-right: 0;
+      padding-top: 0;
+      padding-bottom: 1rem;
+      padding-left: 0;
+    }
   }
 }
