--- a/開発用/src/assets/sass/project/_p-onsen__properties.scss
+++ b/開発用/src/assets/sass/project/_p-onsen__properties.scss
@@ -6,4 +6,8 @@
   margin: 0 auto;
   border-top: 0.5px solid global.$text-color;
   padding-top: 80px;
+
+  @include global.mq('sp') {
+    padding-top: 40px;
+  }
 }
