温泉ページレスポンシブ調整済

--- a/開発用/src/assets/sass/component/_c-onsen__block-maintenance.scss
+++ b/開発用/src/assets/sass/component/_c-onsen__block-maintenance.scss
@@ -5,5 +5,5 @@
   color: global.$text-color;
   @include global.font(13, 400, 24.57, 1.56);
   padding-left: 0.1rem;
-  padding-top: 0.5rem;
+  line-height: 0.89;
 }
