--- a/開発用/src/assets/sass/component/_c-price__note.scss
+++ b/開発用/src/assets/sass/component/_c-price__note.scss
@@ -10,5 +10,6 @@
   @include global.mq('sp') {
     @include global.font(14, 400, 26.46, 0.56);
     padding-left: 0;
+    padding-top: 18px;
   }
 }
