--- a/開発用/src/assets/sass/project/_p-onsen__properties.scss
+++ b/開発用/src/assets/sass/project/_p-onsen__properties.scss
@@ -6,8 +6,10 @@
   margin: 0 auto;
   border-top: 0.5px solid global.$text-color;
   padding-top: 80px;
+  padding-left: 2px;
 
   @include global.mq('sp') {
-    padding-top: 40px;
+    padding-top: 35px;
+    width: 91%;
   }
 }
