--- a/開発用/src/assets/sass/project/_p-price__wrap.scss
+++ b/開発用/src/assets/sass/project/_p-price__wrap.scss
@@ -14,6 +14,8 @@
     width: global.$sp-width;
     min-width: global.$sp-width;
     padding-bottom: 40px;
-    padding-top: 5px;
+    padding-top:0;
+    margin-top: 18px;
+    padding-left: 11px;
   }
 }
