--- a/開発用/src/assets/sass/component/_c-concept__lead.scss
+++ b/開発用/src/assets/sass/component/_c-concept__lead.scss
@@ -5,7 +5,14 @@
   font-family: global.$main-font;
   color: global.$text-color;
   text-align: center;
+
   @include global.mq('sp') {
-    line-height: 2.33;
+@include global.font(15, 400, 34.54, 0.975);
+  }
+
+  .pc-break {
+    @include global.mq('sp') {
+      display: none;
+    }
   }
 }
