--- a/開発用/src/assets/sass/component/_c-footer__nav--item.scss
+++ b/開発用/src/assets/sass/component/_c-footer__nav--item.scss
@@ -7,6 +7,7 @@ font-family: global.$main-font;
 display: block; 
 margin-bottom: 35px;
 width: max-content;
+transition: opacity 0.5s ease;
 @include global.mq('sp') {
   margin-bottom: 0px;
   font-size: 14px;
@@ -14,8 +15,12 @@ width: max-content;
     display: none;
   }
 }
+&:hover{
+  opacity: 0.7;
+}
 }
 
 .c-footer__nav--item:last-child {
   margin-bottom: 0;
+
 }
