--- a/開発用/src/assets/sass/global/_variables.scss
+++ b/開発用/src/assets/sass/global/_variables.scss
@@ -15,6 +15,7 @@ $sub-text-color:#181818;
 $border-bottom-color:#0A0A0A;
 $border-accent-color:#A6A6A6;
 $c-scroll__btn-color:#262626;
+$sns-link-color:#CACACA;
 
 /////////フォント/////////
 $main-font: "Zen Kaku Gothic New", sans-serif;
