--- a/開発用/src/assets/sass/project/_p-concept__onsen--wrap.scss
+++ b/開発用/src/assets/sass/project/_p-concept__onsen--wrap.scss
@@ -2,7 +2,7 @@
 
 .p-concept__onsen--wrap {
   margin: 0 auto;
-    padding-bottom: 146px;
+    padding-bottom: 52px;
     width: 43.49%;
-    padding-right: 40px;
+  padding-left: 1px;
 }
