--- a/開発用/src/assets/sass/project/_p-price__holiday__wrap.scss
+++ b/開発用/src/assets/sass/project/_p-price__holiday__wrap.scss
@@ -1,5 +1,8 @@
-
 @use "../global/" as global;
-.p-price__holiday__wrap{
-padding-top: 20px;
+
+.p-price__holiday__wrap {
+  padding-top: 18px;
+  @include global.mq('sp') {
+    padding-top: 1px;
+  }
 }
