余白調整、スムーススクロールボタンを設置しました。

--- a/開発用/src/assets/sass/project/_index.scss
+++ b/開発用/src/assets/sass/project/_index.scss
@@ -6,7 +6,7 @@
 @use "p-news__wrap";
 @use "p-content";
 @use "p-content__wrap";
-@use "spend";
+@use "p-spend";
 @use "p-gnav";
 @use "p-access";
 @use "p-content__block";
