--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -1172,6 +1172,7 @@ header {
 }
 
 .p-spend-tour {
+	padding-bottom: 120px;
 	padding-top: 190px;
 }
 
@@ -1406,7 +1407,6 @@ header {
 	font-size: 2.4em;
 }
 
-
 .p-footer__sns--items .fa-instagram::before,
 .p-footer__sns--items .fa-facebook-f::before {
 	transition: color 0.5s ease;
@@ -1526,8 +1526,7 @@ header {
 	padding-top: 18px;
 }
 
-.p-dialog {
-
+.dialog {
 	align-items: center;
 	background-color: rgba(96, 93, 93, 0);
 	border: none;
@@ -1643,7 +1642,6 @@ dialog::backdrop {
 	margin-bottom: 12px;
 	padding: 1em 4.5em;
 }
-
 
 .p-room__version {
 	display: flex;
@@ -1763,10 +1761,10 @@ dialog::backdrop {
 	letter-spacing: 0.12em;
 	line-height: 1.8902142857;
 }
+
 .p-onsen__content--wrap {
 	margin: 0 auto;
 	width: 90%;
-
 }
 
 @media (min-width: 768px) and (max-width: 1280px) {
@@ -2346,6 +2344,7 @@ dialog::backdrop {
 }
 
 .p-spend-tour {
+	padding-bottom: 20px;
 	padding-top: 39px;
 }
 
