--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -37,6 +37,11 @@ header {
 	background-size: contain;
 }
 
+#cooking .l-lower-header {
+	background: url(../../assets/img/cooking/header.jpg) no-repeat;
+	background-size: contain;
+}
+
 #spend-page .l-lower-header {
 	background: url(../../assets/img/spend/header.jpg) no-repeat;
 	background-size: contain;
@@ -247,6 +252,7 @@ header {
 }
 
 .c-main-message {
+	color: #2D2D2E;
 	font-size: 15px;
 	letter-spacing: 1.95px;
 	line-height: 2.303;
@@ -1608,6 +1614,133 @@ dialog::backdrop {
 	padding: 1em 4.5em;
 }
 
+#sea.p-course__version {
+	padding-left: 60px;
+}
+
+#luxury.p-course__version {
+	padding-left: 0;
+	padding-right: 60px;
+}
+
+.p-course__gallery {
+	aspect-ratio: 1380/480;
+	display: grid;
+	gap: 2px;
+	grid-template-columns: 33% auto 43%;
+	grid-template-rows: 1fr 1fr;
+	margin-bottom: 40px;
+}
+
+.p-course__img {
+	-o-object-fit: cover;
+	object-fit: cover;
+}
+
+.p-course__img img {
+	height: 100%;
+	width: 100%;
+}
+
+.p-course__img--03 {
+	grid-column: 3/4;
+	grid-row: 1/3;
+	width: 602px;
+}
+
+.p-course__menu {
+	background-image: url(../../assets/img/cooking/menu-bg.jpg);
+	color: #2D2D2E;
+	height: 335px;
+	margin-bottom: 120px;
+	padding: 44px 80px 0 82px;
+	writing-mode: vertical-rl;
+}
+
+#sea .p-course__menu {
+	margin-left: auto;
+}
+
+#luxury .p-course__menu {
+	margin-right: auto;
+}
+
+.p-course__title {
+	font-feature-settings: "vert" on;
+	font-size: 1.5rem;
+	font-weight: 800;
+	line-height: 1.4479166667;
+	padding-left: 70px;
+}
+
+.p-course__list {
+	padding-top: 40px;
+}
+
+.p-course__item {
+	font-family: "Shippori Mincho", serif;
+	font-size: 0.9375rem;
+	font-weight: 800;
+	line-height: 1.448;
+}
+
+.p-course__item:not(:last-of-type) {
+	padding-left: 52px;
+}
+
+.p-dish {
+	color: #2D2D2E;
+	margin-bottom: 120px;
+}
+
+.p-dish__title {
+	font-size: 2rem;
+	letter-spacing: 0.13em;
+	line-height: 1.448125;
+	padding-bottom: 80px;
+	text-align: center;
+}
+
+.p-dish__list {
+	display: flex;
+	justify-content: space-between;
+}
+
+.p-dish__item {
+	width: 27%;
+}
+
+.p-dish__img {
+	margin-bottom: 20px;
+}
+
+.p-dish__text {
+	font-family: "Zen Kaku Gothic New", sans-serif;
+	font-size: 1rem;
+	font-weight: 800;
+	line-height: 1.448125;
+	text-align: center;
+}
+
+.p-restaurant {
+	margin-bottom: 120px;
+}
+
+.p-restaurant__title {
+	color: #2D2D2E;
+	font-size: 2rem;
+	letter-spacing: 0.13em;
+	line-height: 1.448125;
+	padding-bottom: 80px;
+	text-align: center;
+}
+
+.p-restaurant__list {
+	display: flex;
+	gap: 10%;
+	padding: 0 30px;
+}
+
 @media (min-width: 768px) and (max-width: 1280px) {
 
 .c-drawer-btn {
@@ -1700,6 +1833,11 @@ dialog::backdrop {
 
 #guest-room .l-lower-header {
 	background-image: url(../../assets/img/guest-room/header_sp.jpg);
+	background-size: cover;
+}
+
+#cooking .l-lower-header {
+	background-image: url(../../assets/img/cooking/header_sp.jpg);
 	background-size: cover;
 }
 
