--- a/開発用/src/assets/sass/component/_c-main-message.scss
+++ b/開発用/src/assets/sass/component/_c-main-message.scss
@@ -7,6 +7,7 @@
     letter-spacing: 1.95px;
     padding-top: 120px;
     padding-bottom: 110px;
+    color: global.$text-color;
 }
 
 .c-main-message__text {
