--- a/開発用/src/assets/sass/layout/_l-lower-header.scss
+++ b/開発用/src/assets/sass/layout/_l-lower-header.scss
@@ -37,12 +37,13 @@
     }
 }
 #cooking .l-lower-header {
-    // background: linear-gradient(0deg, rgba(0, 0, 0, 0.49) 0%, rgba(0, 0, 0, 0.49) 100%), url(../../assets/img/cooking/header.jpg), lightgray -26.652px -100px / 101.896% 165% no-repeat;
-    background: url(../../assets/img/cooking/header.jpg) no-repeat;
-    background-size: contain;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.49) 0%, rgba(0, 0, 0, 0.49) 100%), url(../../assets/img/cooking/header.jpg), lightgray -313.461px -3.068px / 254.002% 107.11% no-repeat;
+    // background: url(../../assets/img/cooking/header.jpg) no-repeat;
+    // background-size: contain;
 
     @include global.mq(sp) {
-        background-image: url(../../assets/img/cooking/header_sp.jpg);
+        // background-image: url(../../assets/img/cooking/header_sp.jpg);
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 100%), url(../../assets/img/cooking/header_sp.jpg), lightgray -313.461px -3.068px / 254.002% 107.11% no-repeat;
         background-size: cover;
     }
 }
