--- a/開発用/src/assets/sass/project/_p-course.scss
+++ b/開発用/src/assets/sass/project/_p-course.scss
@@ -1,27 +1,36 @@
 @use "../global/" as global;
 
 .p-course {
-    // padding-left: 60px;
+    margin-bottom: 20px;
 }
-// .p-course__version {
-//     padding-left: 60px;
-// }
-#sea.p-course__version{
+#sea.p-course__version {
     padding-left: 60px;
+    @include global.mq(sp) {
+        padding: 0;
+    }
 }
 #luxury.p-course__version {
     padding-left: 0;
     padding-right: 60px;
+    @include global.mq(sp) {
+        padding: 0;
+    }
 }
 .p-course__gallery {
     display: grid;
-    // grid-template-columns: 458px, 316px, 602px;
-    // grid-template-rows: 235px, 235px;
     grid-template-columns: 33% auto 43%;
     grid-template-rows: 1fr 1fr;
     gap: 2px;
     aspect-ratio: 1380 / 480;
     margin-bottom: 40px;
+    @include global.mq(sp) {
+        grid-template-columns: 1fr 52px 1fr;
+        grid-template-rows: 84px 84px 129px;
+        gap: 1px;
+        aspect-ratio: 335 / 298;
+        width: 89.3%;
+        margin: 0 auto 14px;
+    }
 }
 .p-course__img {
     object-fit: cover;
@@ -34,21 +43,95 @@
     width: 602px;
     grid-row: 1 / 3;
     grid-column: 3/ 4;
+    @include global.mq(sp) {
+        grid-column: 2/ 4;
+        grid-row: 1 / 3;
+        width: 58.5vw;
+    }
 }
+#sea .p-course__img--01 {
+    @include global.mq(sp) {
+        order: 4;
+        width: 44.5vw;
+        grid-column: 1/ 3;
+    }
+}
+#sea .p-course__img--02 {
+    @include global.mq(sp) {
+        order: 3;
+    }
+}
+#sea .p-course__img--03 {
+    @include global.mq(sp) {
+        order: 2;
+    }
+}
+#sea .p-course__img--04 {
+    @include global.mq(sp) {
+        order: 5;
+    }
+}
+#sea .p-course__img--05 {
+    @include global.mq(sp) {
+        order: 1;
+    }
+}
+#luxury .p-course__img--01 {
+    @include global.mq(sp) {
+        order: 5;
+    }
+}
+#luxury .p-course__img--02 {
+    @include global.mq(sp) {
+        order: 1;
+    }
+}
+// #luxury .p-course__img--03 {
+//     @include global.mq(sp) {
+//         order: 4;
+//         width: 167px;
+//         grid-column: 1/ 3;
+//     }
+// }
+#luxury .p-course__img--04 {
+    @include global.mq(sp) {
+        order: 4;
+        width: 44.5vw;
+        grid-column: 1/ 3;
+    }
+}
+#luxury .p-course__img--05 {
+    @include global.mq(sp) {
+        order: 1;
+    }
+}
+
 .p-course__menu {
     background-image: url(../../assets/img/cooking/menu-bg.jpg);
     padding: 44px 80px 0 82px;
-    // max-width: 780px;
     writing-mode: vertical-rl;
     margin-bottom: 120px;
     height: 335px;
     color: global.$text-color;
+    @include global.mq(sp) {
+        padding: 23px 6vw 0;
+        height: 282px;
+        margin-bottom: 40px;
+        max-width: 100%;
+    }
 }
-#sea .p-course__menu{
+#sea .p-course__menu {
     margin-left: auto;
+    @include global.mq(sp) {
+        margin-left: 0;
+    }
 }
-#luxury .p-course__menu{
+#luxury .p-course__menu {
     margin-right: auto;
+    @include global.mq(sp) {
+        margin-right: 0;
+        margin-bottom: 60px;
+    }
 }
 .p-course__title {
     font-feature-settings: "vert" on;
@@ -56,9 +139,17 @@
     font-weight: 800;
     line-height: calc(34.75 / 24);
     padding-left: 70px;
+    @include global.mq(sp) {
+        padding-left: 20px;
+        font-size: calc(20 / 16 * 1rem);
+        line-height: calc(28.96 / 20);
+    }
 }
 .p-course__list {
     padding-top: 40px;
+    @include global.mq(sp) {
+        padding-top: 35px;
+    }
 }
 .p-course__item {
     font-size: calc(15 / 16 * 1rem);
@@ -68,4 +159,7 @@
 }
 .p-course__item:not(:last-of-type) {
     padding-left: 52px;
+    @include global.mq(sp) {
+        padding-left: 10px;
+    }
 }
