空室検索ボタンの修正

--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -152,7 +152,7 @@ header {
 
 .c-search-btn {
 	background: linear-gradient(180deg, #007ADF 0%, rgba(2, 200, 160, 0.79) 139.64%, rgba(0, 236, 188, 0.48) 194.29%);
-	display: inline-block;
+	display: none;
 	height: 280px;
 	position: fixed;
 	right: 0;
