--- a/開発用/src/assets/sass/component/_c-search-btn.scss
+++ b/開発用/src/assets/sass/component/_c-search-btn.scss
@@ -1,7 +1,6 @@
 @use "../global" as global;
 
 .c-search-btn{
-    display: inline-block;
     width: 125px;
     height: 280px;
     background: global.$c-search-btn-color;
@@ -10,6 +9,7 @@
     top: 50%;
     transform: translateY(-50%);
     z-index: 10;
+    display: none;
     @include global.mq('sp'){
         width: 57px;
         height: 160px;
