--- a/開発用/src/assets/sass/layout/_l-lower-header.scss
+++ b/開発用/src/assets/sass/layout/_l-lower-header.scss
@@ -14,6 +14,16 @@
         aspect-ratio: unset;
     }
 }
+
+@keyframes fadeInAnime {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+  }
+}
+
 .l-lower-header__title {
     color: global.$white-color;
     font-size: calc(24px + (48 - 24) * ((100vw - 768px)) / (1440 - 768));
@@ -30,7 +40,7 @@
 
 #guest-room .l-lower-header {
     background: url(../../assets/img/guest-room/header.jpg) no-repeat;
-    background-size: contain;
+    background-size: cover;
 
     @include global.mq(sp) {
         background-image: url(../../assets/img/guest-room/header_sp.jpg);
@@ -38,19 +48,22 @@
     }
 }
 
+#cooking .l-lower-header {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.49) 0%, rgba(0, 0, 0, 0.49) 100%), url(../../assets/img/cooking/header.jpg), lightgray -313.461px -3.068px / 254.002% 107.11% no-repeat;
+    // background: url(../../assets/img/cooking/header.jpg) no-repeat;
+    // background-size: contain;
 
-@keyframes fadeInAnime {
-    0% {
-        opacity: 0;
+    @include global.mq(sp) {
+        // background-image: url(../../assets/img/cooking/header_sp.jpg);
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 100%), url(../../assets/img/cooking/header_sp.jpg), lightgray -313.461px -3.068px / 254.002% 107.11% no-repeat;
+        background-size: cover;
     }
-    100% {
-        opacity: 1;
-  }
 }
+
 
 #spend-page .l-lower-header {
     background: url(../../assets/img/spend/header.jpg) no-repeat;
-    background-size: contain;
+    background-size: cover;
 
     @include global.mq(sp) {
         background-image: url(../../assets/img/spend/header_sp.jpg);
